chore: more updates to dependencies